# automl-orchestrator

./: .gitignore  README.md  main.py  pyproject.toml
infra/database/migrations/: 001_initial_auth_schema.sql  002_rate_limits.sql
infra/docker/: docker-compose.yml
src/api/rest/: __init__.py  auth.py
src/auth/: __init__.py  dependencies.py  jwt.py  password.py  schemas.py  service.py
src/config/: config.py
src/database/: __init__.py  connection.py  init.py  models.py
src/prompts/agent-orchestrator/: v1.0.0.md
src/tools/: __init__.py
src/tools/agent_researcher_tools/: __init__.py  kaggle.py  models.py  research.py
src/tools/cost_tracker/: __init__.py  tracker.py  usage.py
src/utils/: logger.py
tests/: conftest.py  test_auth.py  test_config.py  test_logger.py
